--- a/src/components/shared/SideHeader/SideHeader.css
+++ b/src/components/shared/SideHeader/SideHeader.css
@@ -1,139 +1,138 @@
 .sideHeader {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    border-right: 5px solid var(--border-color);
-    overflow-y: auto;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  border-right: 5px solid var(--border-color);
+  overflow-y: auto;
 }
 
-.profilePic{
-    width: 200px;
-    height: 200px;
-    min-height: 200px;
-    margin-top: 10px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: var(--icon-primary-shadow);
-    overflow: hidden;
-    border: 10px solid var(--color-bg-primary);
+.profilePic {
+  width: 200px;
+  height: 200px;
+  min-height: 200px;
+  margin-top: 10px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: var(--icon-primary-shadow);
+  overflow: hidden;
+  border: 10px solid var(--color-bg-primary);
 }
 
-.profilePicInner{
-    background-image: url('/Images/profile.webp');
-    background-size: cover;
-    background-position: center;
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    transition: .3s;
+.profilePicInner {
+  background-image: url("/Images/profile.webp");
+  background-size: cover;
+  background-position: center;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  transition: 0.3s;
 }
 
 .profilePicInner:hover {
   transform: scale(1.2);
- 
-} 
+}
 
 .contactIcon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    width: 50px;
-    font-size: 25px;
-    border-radius: 50%;
-    box-shadow: var(--icon-primary-shadow);
-    background: var(--shadow-bg-primary);
-    position: relative;
-    margin-right: 10px;
-    color: #84858f;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 50px;
+  font-size: 25px;
+  border-radius: 50%;
+  box-shadow: var(--icon-primary-shadow);
+  background: var(--shadow-bg-primary);
+  position: relative;
+  margin-right: 10px;
+  color: #84858f;
 }
 .contactIcon::after {
-    content: '';
-    position: absolute;
-    height: 80%;
-    width: 80%;
-    border-radius: 50%;
-    box-shadow: var(--icon-primary-shadow-hover);
-    background-color: transparent;
+  content: "";
+  position: absolute;
+  height: 80%;
+  width: 80%;
+  border-radius: 50%;
+  box-shadow: var(--icon-primary-shadow-hover);
+  background-color: transparent;
 }
 
-.contactIcon:hover{
-    color: #0091f8;
+.contactIcon:hover {
+  color: #0091f8;
 }
 .sideHeader a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .mainBtn {
-    padding: 10px 15px;
-    font-size: 20px;
-    font-weight: 500;
-    border-radius: 50px;
-    box-shadow: var(--btn-primary-shadow);
-    background: var(--shadow-bg-primary);
-    transition: all 0.3s;
-    position: relative;
-    z-index: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
+  padding: 10px 15px;
+  font-size: 20px;
+  font-weight: 500;
+  border-radius: 50px;
+  box-shadow: var(--btn-primary-shadow);
+  background: var(--shadow-bg-primary);
+  transition: all 0.3s;
+  position: relative;
+  z-index: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
 }
 
 .mainBtn span {
-    transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .mainBtn::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-    transition: all 0.3s;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-top-style: solid;
-    border-bottom-style: solid;
-    border-top-color: rgba(255, 255, 255, 0.5);
-    border-bottom-color: rgba(255, 255, 255, 0.5);
-    transform: scale(0.1, 1);
-    color: var(--text-color);
-    z-index: -1;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-color: rgba(255, 255, 255, 0.5);
+  border-bottom-color: rgba(255, 255, 255, 0.5);
+  transform: scale(0.1, 1);
+  color: var(--text-color);
+  z-index: -1;
 }
 
 .mainBtn:hover span {
-    letter-spacing: 2px;
+  letter-spacing: 2px;
 }
 
 .mainBtn:hover::before {
-    opacity: 1;
-    transform: scale(1, 1);
-    border-radius: 50px;
-    box-shadow: var(--btn-primary-shadow-hover);
-    border: none;
+  opacity: 1;
+  transform: scale(1, 1);
+  border-radius: 50px;
+  box-shadow: var(--btn-primary-shadow-hover);
+  border: none;
 }
 
 .mainBtn::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    transition: all 0.5s;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: all 0.5s;
 }
 
 .mainBtn:hover::after {
-    opacity: 0;
-    transform: scale(0.1, 1);
+  opacity: 0;
+  transform: scale(0.1, 1);
 }
