--- a/src/components/utilities/MainSpinner.css
+++ b/src/components/utilities/MainSpinner.css
@@ -1,14 +1,14 @@
-.spinnerMain{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: transparent;
+.spinnerMain {
+  width: 100vw;
+  height: 100dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
 }
 
 @media only screen and (max-width: 400px) {
-    .spinnerMain h3{
-        font-size: 15px;
-    }
+  .spinnerMain h3 {
+    font-size: 15px;
   }
+}
