--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,34 +1,32 @@
-.mainNav{
-    height: 100vh;
-    width: 100%;
-    overflow-y: auto;
-
+.mainNav {
+  height: 100dvh;
+  width: 100%;
+  overflow-y: auto;
 }
-.mainNavView{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 90vh;
+.mainNavView {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 90vh;
 }
-.footer{
-    background: var(  --color-bg-primary);
-    box-shadow:  var(--header-shadow);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
+.footer {
+  background: var(--color-bg-primary);
+  box-shadow: var(--header-shadow);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
-.sideNav{
-    display: block;
+.sideNav {
+  display: block;
 }
-
 
 @media screen and (max-width: 990px) {
-    .sideNav {
-        display: none;
-    }
-    .mainNav{
-        display: block;
-        width: 100vw !important;
-    }
+  .sideNav {
+    display: none;
   }
+  .mainNav {
+    display: block;
+    width: 100vw !important;
+  }
+}
