--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,5 +1,8 @@
 .mainNav {
-  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
   width: 100%;
   overflow-y: auto;
 }
@@ -7,7 +10,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 90vh;
+  /* height: 90vh; */
+  /* height: 100%; */
 }
 .footer {
   background: var(--color-bg-primary);
