--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,13 +1,13 @@
 .home{
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 90vh;
+    /* min-height: 90vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 .homeHeading{
-    font-size: 50px;
+    font-size: 30px;
     font-weight: bold !important;
     color: var(--color-heading-bold);
     margin-bottom: 30px;
