--- a/src/components/adminPanel/components/Spinner/Spinner.css
+++ b/src/components/adminPanel/components/Spinner/Spinner.css
@@ -1,6 +1,8 @@
-.spinner{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.spinner {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: transparent !important;
 }
