--- a/src/index.css
+++ b/src/index.css
@@ -11,16 +11,14 @@
   --btn-primary-shadow-hover: inset -2px -2px 6px rgba(255, 255, 255, 0.1),
     inset 2px 2px 6px rgba(0, 0, 0, 0.8);
   --btn-primary-shadow: -2px -2px 6px rgba(255, 255, 255, 0.1), 2px 2px 6px rgba(0, 0, 0, 0.8);
-  --icon-primary-shadow-hover: inset -2px -2px 6px rgba(255, 255, 255, 0.1),
-    inset 2px 2px 6px rgba(0, 0, 0, 0.8);
-  --icon-primary-shadow: -2px -2px 6px rgba(255, 255, 255, 0.1), 2px 2px 6px rgba(0, 0, 0, 0.8);
+  --icon-primary-shadow-hover: inset 0px -2px 0px rgba(255, 255, 255, 0.1),
+    inset 0px 2px 2px rgba(0, 0, 0, 0.8);
+  --icon-primary-shadow: 0px -2px 0px rgba(255, 255, 255, 0.1), 0px 2px 2px rgba(0, 0, 0, 0.8);
 
-  /* ------------------------- */
   --imgShadow: #32363b;
   --border-color: #636363;
-
   --shadow-bg-primary: linear-gradient(145deg, #1e2024, #23272b);
-  --shadow-primary: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
+  --shadow-primary: -2px -2px 0px rgba(255, 255, 255, 0.1), 1px 2px 2px rgba(0, 0, 0, 0.8);
 }
 
 .lightTheme {
@@ -32,10 +30,6 @@
   --border-color: #636363;
   --togolarBtn: #ecf0f3;
 
-  /* 
-
-  /* ---------shadow----------- */
-
   --input-shadow: inset 6px 6px 12px #c9cccf, inset -6px -6px 12px #ffffff;
   --progressbar-shadow: -6px -6px 7px rgba(255, 255, 255, 0.5), 7px 7px 7px rgba(70, 70, 70, 0.12),
     inset -6px -6px 7px rgba(255, 255, 255, 0.5), inset 7px 7px 7px rgba(70, 70, 70, 0.12);
@@ -43,28 +37,14 @@
     -10px -10px 10px -1px rgba(255, 255, 255, 0.7);
   --btn-primary-shadow-hover: inset 10px 10px 10px -1px rgba(10, 99, 169, 0.16),
     inset -10px -10px 10px -1px rgba(255, 255, 255, 0.7);
-  --icon-primary-shadow-hover: inset -3px -3px 7px #fff, inset 3px 3px 5px rgba(94, 104, 121, 0.712);
-  --icon-primary-shadow: -3px -3px 7px #fff, 3px 3px 5px rgba(94, 104, 121, 0.712);
+  --icon-primary-shadow-hover: inset 0px -2px 0px #fff, inset 0px 2px 2px rgba(94, 104, 121, 0.8);
+  --icon-primary-shadow: 0px -2px 0px #fff, 0px 2px 2px rgba(94, 104, 121, 0.8);
+  --btn-primary-shadow-hover: inset -2px -2px 6px rgba(255, 255, 255, 0.1),
+    inset 2px 2px 6px rgba(0, 0, 0, 0.8);
 
-  /* 
---btn-primary-shadow: 10px 10px 10px -1px rgba(10, 99, 169, 0.16),-10px -10px 10px -1px rgba(255, 255, 255, 0.70);
-
---btn-primary-shadow-hover: inset 10px 10px 10px -1px rgba(10, 99, 169, 0.16), inset -10px -10px 10px -1px rgba(255, 255, 255, 0.70);
-
-
-
---btn-primary-shadow-hover: inset -2px -2px 6px rgba(255,255,255,0.1
-),inset 2px 2px 6px rgba(0,0,0,0.8);
-
-
---btn-primary-shadow: -2px -2px 6px rgba(255,255,255,0.1), 2px 2px 6px rgba(0,0,0,0.8);
-  
-
-
-  /* --shadow-bg-primary: linear-gradient(315deg, #d4d8db, #fdffff);
-  --shadow-primary: -5px -5px 51px #c2c5c7, 5px 5px 51px #ffffff; */
+  --btn-primary-shadow: -2px -2px 6px rgba(255, 255, 255, 0.1), 2px 2px 6px rgba(0, 0, 0, 0.8);
   --shadow-bg-primary: linear-gradient(145deg, #e2e8ec, #ffffff);
-  --shadow-primary: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
+  --shadow-primary: -2px -2px 0px #fff, 1px 2px 2px rgba(94, 104, 121, 0.8);
   /* ------------Hover---------- */
   --color-primary-gradient-from: #6a67ce;
   --color-primary-gradient-to: #fc636b;
