--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,15 +1,9 @@
-.contactsection {
+.contactSection {
   background: var(--shadow-bg-primary);
   box-shadow: var(--shadow-primary);
   border-radius: 10px;
 }
-.contactsection a {
-  text-decoration: none;
-  font-size: 17px;
-}
-.contactIcons a {
-  font-size: 25px;
-}
+
 .inputBox {
   background: var(--color-bg-primary);
   box-shadow: var(--icon-primary-shadow-hover);
@@ -19,7 +13,8 @@
   border-radius: 10px;
   color: var(--text-color);
 }
-input::placeholder ,textarea:focus,
+input::placeholder,
+textarea:focus,
 ::placeholder {
   color: var(--text-color) !important;
 }
