--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -1,53 +1,50 @@
-.resumeHeader{
-    display: flex !important;
-    align-items: center;
-    justify-content: space-around;
-    justify-items: center;
-    box-shadow: var(--btn-primary-shadow);
-    border-radius: 10px;
-}
-.resumeHeaderName{
-    display: flex !important;
-    align-items: center;
-    justify-content: space-around;
-    box-shadow: var(--icon-primary-shadow);
-    border-radius: 10px;
-    margin-bottom: 10px;
-    padding: 10px 0px;
+.resumeHeader {
+  display: flex !important;
+  align-items: center;
+  justify-content: space-around;
+  justify-items: center;
+  box-shadow: var(--icon-primary-shadow);
+  border-radius: 10px;
 }
 
-.resumeBtn:hover{
-    border-radius: 10px;
-    background: var(--shadow-bg-primary);
-    box-shadow:  var(--shadow-primary);
+.resumeBtn:hover {
+  border-radius: 10px;
+  background: var(--shadow-bg-primary);
+  box-shadow: var(--shadow-primary);
 }
 
-.resumeHeader a{
-    padding: 20px 0px;
-    display: flex !important;
-    align-items: center;
-    justify-content: space-around;
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: 600;
+.resumeHeader a {
+  padding: 5px 0px;
+  display: flex !important;
+  align-items: center;
+  justify-content: space-around;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 600;
 }
-.resumeHeader a.active{
-box-shadow: var(--icon-primary-shadow-hover);
-border-radius: 10px;
+.resumeHeader a.active {
+  box-shadow: var(--icon-primary-shadow-hover);
+  border-radius: 10px;
 }
 
-.resumeHeader a:hover{
-    border-radius: 10px;
-    box-shadow:  var(--icon-primary-shadow);
+.resumeHeader a:hover {
+  border-radius: 10px;
+  box-shadow: var(--icon-primary-shadow);
 }
-.resumeHeader a.active:hover{
-    border-radius: 10px;
-    box-shadow: var(--icon-primary-shadow-hover);
+.resumeHeader a.active:hover {
+  border-radius: 10px;
+  box-shadow: var(--icon-primary-shadow-hover);
 }
 
 @media only screen and (max-width: 600px) {
-    .resumeHeader a{
-        padding: 12px 0px;
-        font-size: 18px;
-    }
+  .resumeHeader a {
+    padding: 5px 0px;
+    font-size: 18px;
   }
+}
+@media only screen and (max-width: 400px) {
+  .resumeHeader a {
+    padding: 5px 0px;
+    font-size: 16px;
+  }
+}
