--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -1,34 +1,35 @@
-
-.mainCard  * {
-	transition: 0.5s;
+.mainCard * {
+  transition: 0.5s;
 }
 
-.mainCard{
-position: relative;
-padding-top: 30px;
-padding-bottom: 30px;
-background: var(--shadow-bg-primary);
-box-shadow: var(--shadow-primary);
-overflow: hidden;
-border: none !important;
-z-index: 0 !important;
+.mainCard {
+  position: relative;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: var(--shadow-bg-primary);
+  box-shadow: var(--shadow-primary);
+  overflow: hidden;
+  border: none !important;
+  z-index: 0 !important;
 }
-.mainCard:hover img{
-	transform: translateY(-20px);
+.mainCard:hover img {
+  transform: translateY(-20px);
 }
-.mainCard:hover .cardBody{
-	transform: translateY(-20px);
+.mainCard:hover .cardBody {
+  transform: translateY(-20px);
 }
 
-
-
-.btnGroup{
-display: flex;
-justify-content: space-between;
-align-items: center;
-width: 100%;
+.cardBody {
+  box-shadow: var(--icon-primary-shadow);
 }
-.btnGroup a{
-	text-decoration: none;
-	font-size: 20px;
+
+.btnGroup {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.btnGroup a {
+  text-decoration: none;
+  font-size: 20px;
 }
