--- a/src/pages/Services/Service/Service.css
+++ b/src/pages/Services/Service/Service.css
@@ -25,8 +25,7 @@
 .serviceImg {
   width: 100%;
   height: 220px;
-  margin-bottom: 5px;
-  /* border-radius: 10px; */
+  border-bottom: 5px black groove;
 }
 
 @media only screen and (max-width: 600px) {
