--- a/src/pages/Services/Service/Service.css
+++ b/src/pages/Services/Service/Service.css
@@ -25,7 +25,7 @@
 .serviceImg {
   width: 100%;
   height: 220px;
-  border-bottom: 5px black groove;
+  border-bottom: 5px var(--color-bg-primary) groove;
 }
 
 @media only screen and (max-width: 600px) {
