work design update

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,11 +10,12 @@
 
 .navlinkA {
   text-decoration: none;
-  margin: 5px 0;
+  margin: 2px 0;
   font-size: 17px;
   padding: 5px 10px;
   border-radius: 10px;
   color: var(--text-color);
+  font-style: italic;
 }
 .navLogo {
   display: none;
