--- a/src/pages/Resume/ResumeComponents/Education/EducationSection/EducationSection.css
+++ b/src/pages/Resume/ResumeComponents/Education/EducationSection/EducationSection.css
@@ -1,11 +1,8 @@
-.eduSection{
-    /* border-radius: 10px; */
-    background: var(--shadow-bg-primary);
-    box-shadow:  var(--icon-primary-shadow);
-    min-height: 350px;
-    overflow: hidden;
+.cardContainer {
+  background: var(--shadow-bg-primary);
+  box-shadow: var(--icon-primary-shadow);
 }
 
-.eduSection *{
-    transition: 0.5s ease-in-out;
+.cardContainer * {
+  transition: 0.5s ease-in-out;
 }
