--- a/src/components/utilities/Utilities.css
+++ b/src/components/utilities/Utilities.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-around;
   box-shadow: var(--icon-primary-shadow);
-  margin-bottom: 10px;
+  margin-bottom: 0;
   padding: 10px 0px;
   font-style: italic;
 }
