--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.ReactModal__Overlay.ReactModal__Overlay--after-open {
+/* .ReactModal__Overlay.ReactModal__Overlay--after-open {
   z-index: 9;
-}
+} */
 
 @font-face {
   font-family: 'jungleFont';
