--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -68,15 +68,7 @@
   min-height: 50vh;
   width: 100%;
 }
-.serviceBox {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: var(--icon-primary-shadow);
-  border-radius: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
+
 
 @media only screen and (min-width: 2400px) {
   .cardImg {
@@ -91,6 +83,16 @@
     font-size: 28px;
     height: 116px;
     line-height: 28px;
+  }
+  .navlinkA {
+    font-size: 26px;
+    padding: 10px 20px;
+  }
+  .cardSmallText {
+    font-size: 24px;
+  }
+  .sectionHeader {
+    font-size: 40px;
   }
 }
 @media only screen and (min-width: 1900px) and (max-width: 2400px) {
@@ -107,6 +109,16 @@
     height: 102px;
     line-height: 25px;
   }
+  .navlinkA {
+    font-size: 24px;
+    padding: 10px 20px;
+  }
+  .cardSmallText {
+    font-size: 22px;
+  }
+  .sectionHeader {
+    font-size: 35px;
+  }
 }
 @media only screen and (min-width: 1650px) and (max-width: 1900px) {
   .cardImg {
@@ -122,6 +134,16 @@
     height: 96px;
     line-height: 22px;
   }
+  .navlinkA {
+    font-size: 22px;
+    padding: 8px 16px;
+  }
+  .cardSmallText {
+    font-size: 20px;
+  }
+  .sectionHeader {
+    font-size: 32px;
+  }
 }
 @media only screen and (min-width: 1500px) and (max-width: 1650px) {
   .cardImg {
@@ -135,6 +157,12 @@
   .cardDetails {
     font-size: 20px;
     height: 86px;
+  }
+  .navlinkA {
+    font-size: 20px;
+  }
+  .cardSmallText {
+    font-size: 18px;
   }
 }
 @media only screen and (min-width: 450px) and (max-width: 576px) {
