--- a/src/pages/RecentProjects/RecentProjects.css
+++ b/src/pages/RecentProjects/RecentProjects.css
@@ -1,10 +1,18 @@
-
+.btnGroup {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.btnGroup a {
+  text-decoration: none;
+  font-size: 20px;
+}
 .tags {
   background-color: var(--color-bg-primary);
   box-shadow: var(--icon-primary-shadow-hover);
   border-radius: 10px;
 }
-
 
 .tagMenu {
   display: flex;
