--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -2,11 +2,16 @@
   padding: 0 8px;
   font-style: italic;
 }
+
 .cardImg {
   width: 100%;
   height: 180px;
-  border-bottom: 5px var(--color-bg-primary) groove;
   padding-top: 2px;
+  padding-bottom: 2px;
+  overflow: hidden;
+}
+.cardImg:hover {
+  scale: 1.1;
 }
 .cardTitle {
   height: 44px;
@@ -52,7 +57,6 @@
 .serviceCardDetails > .cardDetails {
   display: block;
 }
-
 
 @media only screen and (min-width: 2400px) {
   .cardImg {
