--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -39,6 +39,7 @@
   border: 3px solid #c4c4c4;
   border-radius: 10px;
   width: 80%;
+  font-size: 20px;
 }
 
 .browseBtn {
@@ -133,11 +134,11 @@
   background-image: url(/Images/crossIcon.webp) !important;
 }
 
-@media only screen and (max-width: 1000px) {
+/* @media only screen and (max-width: 1000px) {
   .gameBtnGroup {
     width: 90%;
   }
-}
+} */
 
 @media only screen and (min-width: 2100px) {
   .gameIcon {
@@ -147,6 +148,9 @@
   .gameIcon img {
     height: 300px;
     width: 300px;
+  }
+  .scoreBoard {
+    font-size: 30px;
   }
 }
 
@@ -159,6 +163,9 @@
     height: 270px;
     width: 270px;
   }
+  .scoreBoard {
+    font-size: 28px;
+  }
 }
 @media only screen and (min-width: 1500px) and (max-width: 1800px) {
   .gameIcon {
@@ -169,6 +176,9 @@
     height: 220px;
     width: 220px;
   }
+  .scoreBoard {
+    font-size: 24px;
+  }
 }
 @media only screen and (min-width: 1025px) and (max-width: 1500px) {
   .gameIcon {
@@ -178,6 +188,9 @@
   .gameIcon img {
     height: 200px;
     width: 200px;
+  }
+  .scoreBoard {
+    font-size: 22px;
   }
 }
 
@@ -201,6 +214,9 @@
   }
   .linkBtn {
     padding: 10px 20px;
+  }
+  .scoreBoard {
+    font-size: 18px;
   }
 
   @media only screen and (max-width: 650px) {
@@ -265,6 +281,9 @@
     }
     .arrow1 {
       width: 50px;
+    }
+    .scoreBoard {
+      font-size: 16px;
     }
   }
 }
