--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -48,7 +48,7 @@
 .linkBtn {
   text-decoration: none;
   padding: 10px 20px;
-  font-size: 20px;
+  /* font-size: 20px; */
   box-shadow: var(--btn-primary-shadow);
   background: var(--shadow-bg-primary);
   border-radius: 50px;
@@ -71,7 +71,7 @@
   text-decoration: none;
 }
 .gameBtnGroup {
-  width: 70%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -134,11 +134,6 @@
   background-image: url(/Images/crossIcon.webp) !important;
 }
 
-/* @media only screen and (max-width: 1000px) {
-  .gameBtnGroup {
-    width: 90%;
-  }
-} */
 
 @media only screen and (min-width: 2100px) {
   .gameIcon {
@@ -210,7 +205,7 @@
     box-shadow: var(--icon-primary-shadow);
   }
   .gameBtnGroup {
-    width: 100%;
+    width: 120%;
   }
   .linkBtn {
     padding: 10px 20px;
@@ -248,6 +243,9 @@
     }
     .ruleImg3 {
       margin-top: 75px;
+    }
+    .playAgainBtn{
+      margin-right: 0;
     }
   }
 
