--- a/src/components/utilities/Utilities.css
+++ b/src/components/utilities/Utilities.css
@@ -7,6 +7,31 @@
   padding: 10px 0px;
   font-style: italic;
 }
+.video-skeleton {
+  width: 100%;
+  height: 300px; /* or any fixed height */
+  background-color: #e0e0e0;
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.pulse {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #e0e0e0 0%, #f2f2f2 50%, #e0e0e0 100%);
+  background-size: 200% 100%;
+  animation: pulse-animation 1.5s infinite;
+}
+
+@keyframes pulse-animation {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
 
 @media only screen and (max-width: 600px) {
   .sectionHeader {
