--- a/src/pages/RecentProjects/RecentProjects.css
+++ b/src/pages/RecentProjects/RecentProjects.css
@@ -28,7 +28,14 @@
 .tags {
   margin-bottom: 10px;
 }
-
+.ant-skeleton.ant-skeleton-element {
+  height: 100% !important;
+  width: 100% !important;
+}
+.ant-skeleton.ant-skeleton-active .ant-skeleton-image {
+  height: 100% !important;
+  width: 100% !important;
+}
 @media only screen and (max-width: 400px) {
   .previewBtn {
     font-size: 17px !important;
